# biotac_sp_ros

./: 99-totalphase.rules  LICENSE.md  Makefile  Makefile-32bit  README.md  biotac.c  biotac.h  biotac.launch  biotac_sp.c  example.c  installCheetahDriver.sh  output.txt
biotac_sp_ros/: CMakeLists.txt  package.xml  setup.py
biotac_sp_ros/src/: biotac.c  biotac_sp_ros.cpp  cheetah.c  contactDetector.py  subscribeBiotac.py  visualiseBiotac.py
biotac_sp_ros2/: CMakeLists.txt  package.xml  setup.py
biotac_sp_ros2/include/biotac_sp_ros2/: biotac.h  biotac_sp_ros.hpp  biotac_sp_ros2.hpp
biotac_sp_ros2/launch/: biotac_launch.py
biotac_sp_ros2/msg/: Floats.msg  HeaderString.msg
biotac_sp_ros2/src/: biotac.c  biotac_sp_ros2.cpp  cheetah.c
biotac_sp_ros2/src/biotac_sp_ros2/: visualise_biotac.py
cheetah_drivers/cheetah-api-linux-x86_64-v3.10/: CHANGES.txt  LICENSE.txt  README.txt
cheetah_drivers/cheetah-api-linux-x86_64-v3.10/c/: Makefile
cheetah_drivers/cheetah-api-linux-x86_64-v3.10/c/_output/: async  blast  detect  eeprom  flash  timing
cheetah_drivers/cheetah-api-linux-x86_64-v3.10/csharp/: cheetah.cs
cheetah_drivers/cheetah-api-linux-x86_64-v3.10/python/: README.txt  async.py  blast.py  cheetah_py.py  detect.py  eeprom.py  flash.py  timing.py
cheetah_lib/: CMakeLists.txt
mpu9250_orientation/: package.xml  setup.cfg  setup.py
mpu9250_orientation/mpu9250_orientation/: orientation_publisher.py  plot_orientation.py
