<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>biotac_sp_ros2</name>
  <version>0.1.0</version>
  <description>
    The biotac_sensors package wraps Syntouch's BioTac / Cheetah C libraries for use with ROS. The object of this package is to continuously collect and publish data read from the BioTac sensors through the Cheetah USB/SPI device.
  </description>
  <license>BSD</license>

  <url type="website">https://github.com/pedrombmachado/biotac_sp_ros</url>

  <maintainer email="pedro.machado@ntu.ac.uk">Pedro Machado</maintainer>
  <author email="pedro.machado@ntu.ac.uk">Pedro Machado</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
